@@ -73,7 +73,6 @@ sub retrieveTrace
 
     if (-f $traceFile) {
         my $trace = Storable::retrieve($traceFile);
-        unlink($traceFile);
         return $trace;
     }
     return undef;
